--- a/ProduceAlmanac/AndroidManifest.xml
+++ b/ProduceAlmanac/AndroidManifest.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.coverflow"
-    android:versionCode="8"
-    android:versionName="TEST_RELEASE" >
+    android:versionCode="1"
+    android:versionName="1.0" >
 
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17"/>
+    
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.coverflow.producealmanac.CoverFlowTestingActivity"
             android:label="@string/app_name" >
