--- a/ProduceAlmanac/bin/AndroidManifest.xml
+++ b/ProduceAlmanac/bin/AndroidManifest.xml
@@ -5,13 +5,13 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="16"
         android:targetSdkVersion="17"/>
     
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="com.example.coverflow.producealmanac.CoverFlowTestingActivity"
             android:label="@string/app_name" >
