--- a/ProduceAlmanac/bin/AndroidManifest.xml
+++ b/ProduceAlmanac/bin/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.coverflow.producealmanac.CoverFlowTestingActivity"
             android:label="@string/app_name" >
