--- a/ProduceAlmanac/bin/AndroidManifest.xml
+++ b/ProduceAlmanac/bin/AndroidManifest.xml
@@ -8,6 +8,9 @@
         android:minSdkVersion="16"
         android:targetSdkVersion="17"/>
     
+    <uses-permission android:name="android.permission.WAKE_LOCK" >
+    </uses-permission>
+    
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name"
@@ -38,6 +41,13 @@
             android:name="com.example.coverflow.producealmanac.DetailActivity"
             android:label="@string/title_activity_detail" >
         </activity>
+        
+        <receiver android:name="com.example.coverflow.producealmanac.AlarmReceiver" >
+        </receiver>
+
+        <service
+            android:name="com.example.coverflow.producealmanac.NotificationService"
+            android:enabled="true" />
     </application>
 
 </manifest>
