--- a/ProduceAlmanac/AndroidManifest.xml
+++ b/ProduceAlmanac/AndroidManifest.xml
@@ -35,6 +35,7 @@
         </activity>
         
         <activity
+            android:label="@string/app_name"
             android:name="com.example.coverflow.producealmanac.NotificationActivity"
 			/>
         <activity
