--- a/ProduceAlmanac/AndroidManifest.xml
+++ b/ProduceAlmanac/AndroidManifest.xml
@@ -12,7 +12,7 @@
     </uses-permission>
     
     <application
-        android:icon="@drawable/icon"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
