--- a/ProduceAlmanac/AndroidManifest.xml
+++ b/ProduceAlmanac/AndroidManifest.xml
@@ -31,16 +31,17 @@
         </activity>
         <activity
             android:name="com.example.coverflow.producealmanac.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main">
         </activity>
         
         <activity
             android:label="@string/app_name"
             android:name="com.example.coverflow.producealmanac.NotificationActivity"
+            android:windowSoftInputMode="adjustPan"
 			/>
         <activity
             android:name="com.example.coverflow.producealmanac.DetailActivity"
-            android:label="@string/title_activity_detail" >
+            android:label="@string/app_name">
         </activity>
         
         <receiver android:name="com.example.coverflow.producealmanac.AlarmReceiver" >
