--- a/ProduceAlmanac/AndroidManifest.xml
+++ b/ProduceAlmanac/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.coverflow.producealmanac.CoverFlowTestingActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,6 +38,7 @@
         <activity
             android:label="@string/app_name"
             android:name="com.example.coverflow.producealmanac.NotificationActivity"
+            android:windowSoftInputMode="adjustPan|stateHidden"
 			/>
         <activity
             android:name="com.example.coverflow.producealmanac.DetailActivity"
